--- a/remix-course/.eslintrc.json
+++ b/remix-course/.eslintrc.json
@@ -1,11 +1,16 @@
 {
-  "extends": ["prettier", "airbnb-base"],
+  "extends": ["prettier", "airbnb-base", "plugin:react/recommended"],
   "parserOptions": {
-    "ecmaVersion": 12
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "commonjs": true,
-    "node": true
+    "node": true,
+    "es2021": true
   },
   "rules": {
     "no-console": 0,
@@ -22,5 +27,5 @@
       }
     ]
   },
-  "plugins": ["prettier"]
+  "plugins": ["prettier", "react"]
 }
